@@ -9,13 +9,15 @@ import bitcamp.myapp.vo.BoardPhoto;
 import bitcamp.myapp.vo.LoginUser;
 import bitcamp.myapp.vo.Member;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import javax.servlet.http.HttpSession;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -24,6 +26,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -48,27 +51,34 @@ public class BoardController {
   }
 
   @PostMapping("add")
-  public String add(Board board, MultipartFile[] files, HttpSession session) throws Exception {
-    Member loginUser = (Member) session.getAttribute("loginUser");
+  public ResponseEntity add(@RequestPart("data") Board board,
+      @RequestPart(value = "files", required = false) MultipartFile[] files) throws Exception {
+    System.out.println(board);
+    Member loginUser = board.getWriter();
     if (loginUser == null) {
-      return "redirect:/auth/form";
+      return new ResponseEntity<>("not exist writer", HttpStatus.BAD_REQUEST);
     }
-    board.setWriter(loginUser);
 
-    ArrayList<BoardPhoto> attachedFiles = new ArrayList<>();
-    for (MultipartFile part : files) {
-      if (part.getSize() > 0) {
-        String uploadFileUrl = ncpObjectStorageService.uploadFile(
-            "bitcamp-nc7-bucket-14", "sns_board/", part);
-        BoardPhoto attachedFile = new BoardPhoto();
-        attachedFile.setFilePath(uploadFileUrl);
-        attachedFiles.add(attachedFile);
+    try {
+      ArrayList<BoardPhoto> attachedFiles = new ArrayList<>();
+      if (files != null) {
+        for (MultipartFile part : files) {
+          if (part.getSize() > 0) {
+            String uploadFileUrl = ncpObjectStorageService.uploadFile(
+                "bitcamp-nc7-bucket-14", "sns_board/", part);
+            BoardPhoto attachedFile = new BoardPhoto();
+            attachedFile.setFilePath(uploadFileUrl);
+            attachedFiles.add(attachedFile);
+          }
+        }
       }
-    }
-    board.setAttachedFiles(attachedFiles);
+      board.setAttachedFiles(attachedFiles);
 
-    boardService.add(board);
-    return "redirect:/board/list?category=" + board.getCategory();
+      boardService.add(board);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
+    return new ResponseEntity<>(board, HttpStatus.OK);
   }
 
   @GetMapping("delete")
@@ -89,28 +99,28 @@ public class BoardController {
     }
   }
 
-  @GetMapping("detail/{category}/{no}")
-  public String detail(
-      @PathVariable int category,
-      @PathVariable int no,
-      Model model) throws Exception {
+  @GetMapping("detail")
+  public ResponseEntity<Map<String, Object>> detail(
+      int category,
+      int boardNo) throws Exception {
 
-    Board board = boardService.get(no);
+    Map<String, Object> response = new HashMap<>();
+
+    Board board = boardService.get(boardNo);
     if (board != null) {
-      boardService.increaseViewCount(no);
-      model.addAttribute("board", board);
+      boardService.increaseViewCount(boardNo);
+      response.put("board", board);
     }
 
     // 좋아요 누른 사람들 닉네임 조회
-    List<String> likedUserNicknames = boardService.boardlikelist(no);
-    model.addAttribute("likedUserNicknames", likedUserNicknames);
+    List<String> likedUserNicknames = boardService.boardlikelist(boardNo);
+    response.put("likedUserNicknames", likedUserNicknames);
 
     // 댓글 조회
-    List<BoardComment> comments = null;
-    comments = boardCommentService.list(no);
-    model.addAttribute("comments", comments);
+    List<BoardComment> comments = boardCommentService.list(boardNo);
+    response.put("comments", comments);
 
-    return "board/detail";
+    return new ResponseEntity<>(response, HttpStatus.OK);
   }
 
 
@@ -155,7 +165,7 @@ public class BoardController {
   public String searchBoards(@PathVariable int category,
       @RequestParam("keyword") String keyword,
       @RequestParam(defaultValue = "1") int page) throws Exception {
-    String encodedKeyword = URLEncoder.encode(keyword, "UTF-8");
+    String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8);
     String queryString = String.format("&keyword=%s&page=%d", encodedKeyword, page);
     return "redirect:/board/list?category=" + category + queryString;
   }
